build/log/idf_py_stdout_output_34962
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/phil/phil/esp/esp32-temperature-controller/build/bootloader/esp-idf/esptool_py && /Users/phil/.espressif/python_env/idf5.5_py3.14_env/bin/python /Users/phil/phil/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/phil/phil/esp/esp32-temperature-controller/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/phil/.espressif/tools/esp-clang/esp-19.1.2_20250312/esp-clang/bin/clang -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/phil/phil/esp/esp32-temperature-controller/build/config -I/Users/phil/phil/esp/esp-idf/components/newlib/platform_include -I/Users/phil/phil/esp/esp-idf/components/freertos/config/include -I/Users/phil/phil/esp/esp-idf/components/freertos/config/include/freertos -I/Users/phil/phil/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/phil/phil/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/phil/phil/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/phil/phil/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/phil/phil/esp/esp-idf/components/freertos/esp_additions/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/phil/phil/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/phil/phil/esp/esp-idf/components/heap/include -I/Users/phil/phil/esp/esp-idf/components/heap/tlsf -I/Users/phil/phil/esp/esp-idf/components/log/include -I/Users/phil/phil/esp/esp-idf/components/soc/include -I/Users/phil/phil/esp/esp-idf/components/soc/esp32 -I/Users/phil/phil/esp/esp-idf/components/soc/esp32/include -I/Users/phil/phil/esp/esp-idf/components/soc/esp32/register -I/Users/phil/phil/esp/esp-idf/components/hal/platform_port/include -I/Users/phil/phil/esp/esp-idf/components/hal/esp32/include -I/Users/phil/phil/esp/esp-idf/components/hal/include -I/Users/phil/phil/esp/esp-idf/components/esp_rom/include -I/Users/phil/phil/esp/esp-idf/components/esp_rom/esp32/include -I/Users/phil/phil/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/phil/phil/esp/esp-idf/components/esp_rom/esp32 -I/Users/phil/phil/esp/esp-idf/components/esp_common/include -I/Users/phil/phil/esp/esp-idf/components/esp_system/include -I/Users/phil/phil/esp/esp-idf/components/esp_system/port/soc -I/Users/phil/phil/esp/esp-idf/components/esp_system/port/include/private -I/Users/phil/phil/esp/esp-idf/components/xtensa/esp32/include -I/Users/phil/phil/esp/esp-idf/components/xtensa/include -I/Users/phil/phil/esp/esp-idf/components/xtensa/deprecated_include -I/Users/phil/phil/esp/esp-idf/components/lwip/include -I/Users/phil/phil/esp/esp-idf/components/lwip/include/apps -I/Users/phil/phil/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/phil/phil/esp/esp-idf/components/lwip/lwip/src/include -I/Users/phil/phil/esp/esp-idf/components/lwip/port/include -I/Users/phil/phil/esp/esp-idf/components/lwip/port/freertos/include -I/Users/phil/phil/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/phil/phil/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/phil/phil/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/phil/phil/esp/esp-idf/components/esp_wifi/include -I/Users/phil/phil/esp/esp-idf/components/esp_wifi/include/local -I/Users/phil/phil/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/phil/phil/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/phil/phil/esp/esp-idf/components/esp_event/include -I/Users/phil/phil/esp/esp-idf/components/esp_phy/include -I/Users/phil/phil/esp/esp-idf/components/esp_phy/esp32/include -I/Users/phil/phil/esp/esp-idf/components/esp_netif/include -I/Users/phil/phil/esp/esp32-temperature-controller/managed_components/espressif__ds18b20/include -I/Users/phil/phil/esp/esp32-temperature-controller/managed_components/espressif__onewire_bus/include -I/Users/phil/phil/esp/esp32-temperature-controller/managed_components/espressif__onewire_bus/interface --target=xtensa-esp-elf -mcpu=esp32  -fcolor-diagnostics -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -Wno-documentation -Wno-typedef-redefinition -Wno-char-subscripts -Wno-format-security -Wno-tautological-overlap-compare -Wno-tautological-pointer-compare -Wno-pointer-bool-conversion -Wno-string-concatenation -Wno-section -Wno-unknown-attributes -Wno-atomic-alignment -Wno-unused-but-set-variable -Wno-unused-function -Wno-gnu-variable-sized-type-not-at-end -Wno-constant-logical-operand -Wno-c2x-extensions -Wno-extern-c-compat -Wno-single-bit-bitfield-constant-conversion -fmacro-prefix-map=/Users/phil/phil/esp/esp32-temperature-controller=. -fmacro-prefix-map=/Users/phil/phil/esp/esp-idf=/IDF -fno-jump-tables -fno-use-cxa-atexit -std=gnu17 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/phil/phil/esp/esp32-temperature-controller/main/main.c
/Users/phil/phil/esp/esp32-temperature-controller/main/main.c:50:92: error: expected ';' after do/while statement
   50 |                                 ESP_LOGI(TAG, "Found an unknown device, address: %016llX", next_onewire_device.address)
      |                                                                                                                        ^
      |                                                                                                                        ;
1 error generated.
ninja: build stopped: subcommand failed.
